--- a/public/index.html
+++ b/public/index.html
@@ -4,50 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>College List</title>
-    <link rel="stylesheet" href="/style">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
+    <title>Student</title>
 </head>
 <body>
-    <h1>My favorite Colleges</h1>
-    <form>
-        <input type="text" placeholder="Type name here"/>
-        <button>Add College</button>
-    </form>
-    <section></section>
-    <script>
-        const addForm = document.querySelector('form')
-        const nameInput = document.querySelector('input')
-        const container = document.querySelector('section')
-
-        function submitHandler(e){
-            e.preventDefault()
-            axios.post('/api/college', {name: nameInput.value, })
-                .then(res => {
-                    container.innerHTML = ''
-                    nameInput.value = ''
-
-                    res.data.forEach(collegeName => {
-                        container.innerHTML += `<p>${collegeName}</p>`
-                    })
-                })
-                .catch(err => {
-                    nameInput.value = ''
-
-                    const notif = document.createElement('aside')
-                    notif.innerHTML = `<p>${err.response.data}</p>
-                    <button class='close'>close</button>`
-                    document.body.appendChild(notif)
-
-                    document.querySelectorAll('.close').forEach(btn => {
-                        btn.addEventListener('click', (e)=>{
-                            e.target.parentNode.remove()
-                        })
-                    })
-                })
-        }
-
-        addForm.addEventListener('submit', submitHandler)
-    </script>
+    <h1>hello!</h1>
 </body>
 </html>
